apps/workload/n8n/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n-db
  namespace: n8n
spec:
  replicas: 1
  selector:
  matchLabels:
  app: n8n-db
  template:
  metadata:
  labels:
    app:
      n8n-db:
      spec:
        containers:
          - name: n8n-db
            image: postgres:16
            resources:
              requests:
                memory: "128Mi"
                cpu: "100m"
              limits:
                memory: "256Mi"
                cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: n8n-db-service
  namespace: n8n
spec:
  type: ClusterIP
  selector:
  app: n8n-db
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: n8n-db-ingress
  namespace: n8n
spec:
  entryPoints:
    - n8n-db
  routes:
    - match: HostSNI(`n8n-db.nkaewam.local`)
      services:
        - name: n8n-db-service
          port: 5432
  tls:
    secretName: n8n-db-tls
    passthrough: false
